feat: add configuration with viper
